test/spec_vectors/simd_int_to_int_extend/fail/module_22.wat
(module (func $i64x2.extend_high_i32x4_u-arg-empty (result v128) (i64x2.extend_high_i32x4_u)))